# pmind-youtube-mcp

./: .env.example  .gitignore  CLAUDE.md  PROMPTS.md  README.md  TOOLS.md  pyproject.toml
src/: __init__.py  config.py  server.py
src/services/: __init__.py  captions.py  channel_banners.py  channel_sections.py  channels.py  comment_threads.py  comments.py  gemini.py  i18n_languages.py  i18n_regions.py  members.py  memberships_levels.py  playlist_images.py  playlist_items.py  playlists.py  search.py  subscriptions.py  thumbnails.py  transcripts.py  video_categories.py  video_screenshots.py  videos.py  watermarks.py
src/utils/: __init__.py  common.py  upload_manager.py  upload_worker.py  youtube_client.py
